# hookedMonero

./: .env.example  .gitignore  MERKLE_BUG.md  README.md  hardhat.config.js  package.json  proof_debug.json  transaction_data.json
circuit/: README.md  compile.sh  monero_bridge.circom  package.json
contracts/: MoneroBridgeVerifier.sol  README.md  WrappedMonero.sol
contracts/interfaces/: IPlonkVerifier.sol
contracts/libraries/: Ed25519.sol
contracts/mocks/: MockWstETH.sol
deployments/: unichain_testnet_latest.json  unichain_testnet_mock_latest.json
frontend/: app.js  index.html  proof-gen.js  styles.css
frontend/circuit/: monero_bridge.wasm
monero-oracle/: Cargo.toml  README.md
monero-oracle/src/: main.rs
scripts/: deploy.js  lp-setup-mock.js  verify-args.js  verify.js
scripts/oracle/: run.sh  setup.sh
scripts/proofGeneration/: generate_dleq.js  generate_proof_and_mint.js  generate_witness.js
scripts/utils/: compute_merkle_proof.js  ed25519_utils.js
